# DeepFake_Ruijie

./: .gitattributes  .gitignore  IEEEtran_doi.bst  main.bbl  main.tex  ref.bib
FreqPRISM-paper-clean-20260528/: EXPERIMENT_CONFIG.md  FreqPRISM_experiment_design.md  README.md  pyproject.toml  pytest.ini  test.py  train.py  validate.py
FreqPRISM-paper-clean-20260528/configs/: apfreq_train100k_full.yaml  apfreq_train100k_source_gamma_anchor.yaml  freqprism_gpu_full.yaml  genimage_sd14_full.yaml
FreqPRISM-paper-clean-20260528/data/: __init__.py  manifests.py
FreqPRISM-paper-clean-20260528/docs/: FreqPRISM_方法说明与实验设计.md  PROTOCOL.md
FreqPRISM-paper-clean-20260528/models/: __init__.py  core.py  hgb_parity.py
FreqPRISM-paper-clean-20260528/networks/: __init__.py  detector.py  native_tiles.py  score_blend.py
FreqPRISM-paper-clean-20260528/options/: __init__.py  base_options.py  train_options.py
FreqPRISM-paper-clean-20260528/results/: README.md
FreqPRISM-paper-clean-20260528/scripts/: check_scoring_parity.py  evaluate_component_weights.py  evaluate_target.py  export_component_scores.py  prepare_source_split.py  run_artifact_family_ablation.py  run_full_fusion_weight_calibration.py  run_fusion_weight_sensitivity.py  run_prior_ablation.py  run_residual_npr_ablation.py  run_source_stress_calibration.py  run_strong_multimetric_external_pipeline.sh  run_tile_resolution_ablation.py  train_detector.py
FreqPRISM-paper-clean-20260528/tests/: test_apfreq_protocol.py  test_evaluate_component_weights.py  test_evaluate_target_manifest.py  test_flat_layout.py  (+15 more)
(+160 files in other folders)
